# segmentation_models.pytorch

./: .gitignore  pyproject.toml
__MACOSX/hackathon_mmwhs/base_code/: ._config.yaml  ._dataset.py  ._defaults.py  ._optimizer.py  ._predict.py  ._train.py  ._validate.py
__MACOSX/hackathon_mmwhs/base_code/models/: ._build.py
hackathon/: README_CHAOS_DA.txt  hackathonDA_CHAOS_base_source.ipynb  test.ipynb
hackathon_mmwhs/base_code/: config.yaml  dataset.py  defaults.py  optimizer.py  predict.py  readme.md  train.py  validate.py
hackathon_mmwhs/base_code/models/: build.py  convnext.py  efficient_unet.py  unet.py
