[tool.black]
line-length = 119
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | docs
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "segmentation-models-pytorch"
version = "0.1.0"
description = ""
authors = ["Ziad Al-Haj Hemidi <z.alhajhemidi@uni-luebeck.de>"]
readme = "README.md"
packages = [{include = "segmentation_models"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
torch = "^2.0.0"
matplotlib = "^3.7.1"
ipykernel = "^6.22.0"
ipywidgets = "^8.0.6"
zipfile36 = "^0.1.3"
nibabel = "^5.1.0"
tqdm = "^4.65.0"
torchvision = "^0.15.1"
yacs = "^0.1.8"
timm = "^0.6.13"
pretrainedmodels = "^0.7.4"
efficientnet-pytorch = "^0.7.1"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
